--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SoundSpread</string>
+    <string name="start_marker">Start marker</string>
+    <string name="end_marker">End marker</string>
 </resources>
